--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ header div.title h1 {
     margin: 0;
     white-space: nowrap;
 }
-header.home div.title h1 {
+header.home div.title h1,
+header.players div.title h1 {
     font-size: clamp(1em,8vw,1.7em);
 }
 header.tournament div.title h1,
