--- a/style.css
+++ b/style.css
@@ -2379,6 +2379,51 @@ h2.round-title span.team.loss {
     }
 }
 
+.player-popup-bg {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+    transition: opacity 250ms;
+}
+.player-popup {
+    background-color: var(--main-bg-color);
+    margin: 2% auto; /* 15% from the top and centered */
+    padding: 20px 25px 40px 25px;
+    width: 80%; /* Could be more or less, depending on screen size */
+    max-width: 1300px;
+    min-height: 30px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+.player-popup-bg div.close-button {
+    position: absolute;
+    align-self: flex-end;
+    margin-right: 10px;
+    border-radius: 6px;
+    padding: 5px 10px 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.2s, box-shadow 0.2s;
+}
+.player-popup-bg div.close-button:hover {
+    background-color: var(--main-button-hover);
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 0.2);
+}
+.player-popup-bg div.close-button-space {
+    height: 30px;
+}
+
+
 body.players div.main-content {
     flex-direction: column;
     align-items: center;
@@ -2398,7 +2443,7 @@ div.player-list {
     flex-direction: column;
     gap: 5px;
 }
-div.player-ov-card {
+.player-ov-card {
     display: flex;
     flex-direction: column;
     background-color: var(--main-button-color);
@@ -2408,10 +2453,10 @@ div.player-ov-card {
     box-sizing: border-box;
     padding: 14px 20px;
 }
-div.player-ov-card:hover {
+.player-ov-card:hover {
     background-color: var(--main-button-hover);
 }
-div.player-ov-card .divider {
+.player-ov-card .divider {
     margin: 5px 0;
 }
 
