--- a/style.css
+++ b/style.css
@@ -98,6 +98,55 @@ h2 {
 a {
     text-decoration: none;
 }
+button {
+    font-family: inherit;
+    font-size: 1em;
+    line-height: 1.15;
+    margin: 0;
+    text-transform: none;
+    padding: 15px 25px;
+    border: 0 none;
+    border-radius: 6px;
+    cursor: pointer;
+    background-color: var(--main-button-color);
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 0.2);
+    transition: background-color 200ms linear, transform 200ms linear, border-width 200ms linear;
+    text-align: center;
+}
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+    -webkit-appearance: button;
+}
+button:hover {
+    background-color: var(--main-button-hover);
+}
+button[disabled] {
+    cursor: default;
+}
+button[disabled]:hover {
+    background-color: var(--main-button-color);
+}
+button.icononly {
+    padding: 12px 16px;
+}
+button.icononly div.material-symbol,
+button.icononly div.material-symbol svg {
+    height: 30px;
+    width: 30px;
+}
+button.user_updating div.material-symbol {
+    animation: ease_rotating 2s infinite;
+}
+@keyframes ease_rotating {
+    to { transform: rotate(-360deg)}
+}
 header {
     height: 60px;
     width: 100%;
