--- a/style.css
+++ b/style.css
@@ -2495,6 +2495,7 @@ div.recent-players-list {
 }
 .player-ov-card-wrapper {
     position: relative;
+    left: 16px;
 }
 .player-ov-card {
     display: flex;
@@ -2505,6 +2506,7 @@ div.recent-players-list {
     transition: background-color 0.2s linear;
     box-sizing: border-box;
     padding: 14px 20px;
+    margin-right: 32px;
 }
 .player-ov-card:hover {
     background-color: var(--main-button-hover);
@@ -2517,11 +2519,29 @@ div.recent-players-list {
     gap: 10px;
     flex-wrap: wrap;
 }
-.x-remove-recent-player {
-    position: absolute;
-    right: -25px;
+.player-ov-card-wrapper:hover>.x-remove-recent-player,
+.player-ov-card-wrapper:focus-within>.x-remove-recent-player {
+    opacity: 1;
+    pointer-events: initial;
 }
-
+.x-remove-recent-player {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 2px;
+    border-radius: 5px;
+    transition: background-color 200ms;
+}
+.x-remove-recent-player:hover {
+    background-color: var(--nobg-button-hover);
+}
+.x-remove-recent-player .material-symbol,
+.x-remove-recent-player svg {
+    height: 28px;
+    width: 28px;
+}
 .player-popup .button.expand-pcards {
     padding: 12px 14px;
 }
